refactor: enforce immutability in `CamundaAuthentication`
* Updated `CamundaAuthentication` to use immutable lists and maps for internal fields.
* Renamed method `mappingRule` to `mappingRules` for consistency in the builder.
* Added JUnit and AssertJ dependencies to the test scope in `pom.xml`.
* Add tests